--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <tr>
 <td>12</td>
 <td>Amman/td>
-<td>2</td>
+<td>3</td>
 <td>27</td>
 <td>Memphis</td>
 <td>4</td>
@@ -243,7 +243,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <tr>
 <td>13</td>
 <td>Chattanooga</td>
-<td>2</td>
+<td>3</td>
 <td>28</td>
 <td>Sacramento</td>
 <td>4</td>
@@ -251,7 +251,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <tr>
 <td>14</td>
 <td>Colorado Springs</td>
-<td>2</td>
+<td>3</td>
 <td>29</td>
 <td>Delhi - BRPL</td>
 <td>4</td>
@@ -259,7 +259,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <tr>
 <td>15</td>
 <td>Kansas City</td>
-<td>2</td>
+<td>3</td>
 <td>-</td>
 <td>-</td>
 <td>-</td>
@@ -275,7 +275,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 
 <p>The map in Figure 5 shows the geographical location of these 29 cities.</p>
 
-<p><b>Figure 5: Geographic location of 29 cities</b><br />
+<p><b>Figure 5: Geographic Location of 29 Cities</b><br />
 <div id="Map"> 
 	<script type = "text/javascript"src="map.js"></script>
 </div>
@@ -402,7 +402,9 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <p><b>Figure 10: Holt-Winters Forecast for Eugene (Cluster1)</b><br />
 <img src="paper/Fig13.svg" alt="image" width = "640"/>
 
-<br />Note: Left chart depicts comparison between model (red) and original data (black). Right chart depicts the 365-day forecast of daily energy demand of Eugene. Original data spanned 4 calendar years from 2010 to end of 2013. Interact with the data by clicking below:</p>
+<br /><i>Note: Left chart depicts comparison between model (red) and original data (black). Right chart depicts the 365-day forecast of daily energy demand of Eugene. Original data spanned 4 calendar years from 2010 to end of 2013.<i></p>
+
+<p>Interact with the data by clicking below:</p>
 
 				<div id="City1">
 				<button onclick="runCOne()">
@@ -416,7 +418,9 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <p><b>Figure 11: Holt-Winters Forecast for Dakar (Cluster 2)</b><br />
 <img src="paper/Fig14.svg" alt="image" width="640"/>
 
-<br />Note: Left chart depicts comparison between model (red) and original data (black). Right chart depicts the 365-day forecast of daily energy demand of Dakar. Original data spanned 4 calendar years from 2011 to end of 2014. Interact with the data by clicking below:</p>
+<br /><i>Note: Left chart depicts comparison between model (red) and original data (black). Right chart depicts the 365-day forecast of daily energy demand of Dakar. Original data spanned 4 calendar years from 2011 to end of 2014.</i></p> 
+
+<p>Interact with the data by clicking below:</p>
 
 				<div id="City2">
 				<button onclick="runCTwo()">
@@ -429,8 +433,9 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <p>The third cluster’s representative, Louisville, has significant periodicity on a yearly basis (see Figure 12). As is the case for cities in Cluster 3, Louisville has two energy demand peaks, a more pronounced peak in the summer and a less pronounced peak in the winter.</p>
 <p><b>Figure 12: Holt-Winters Forecast for Louisville (Cluster 3)</b><br />
 
-<img src="paper/Fig15.svg" alt="image" width = "640"/><br />
-Note: Left chart depicts comparison between model (red) and original data (black). Right chart depicts the 365 day forecast of daily energy demand of Louisville. Original data spanned 3 calendar years from 2011 to end of 2013. Interact with the data by clicking below:</p>
+<img src="paper/Fig15.svg" alt="image" width = "640"/><br /><i>Note: Left chart depicts comparison between model (red) and original data (black). Right chart depicts the 365 day forecast of daily energy demand of Louisville. Original data spanned 3 calendar years from 2011 to end of 2013.</i></p>
+
+<p>Interact with the data by clicking below:</p>
 
 				<div id="City3">
 				<button onclick="runCThree()">
@@ -444,7 +449,8 @@ Note: Left chart depicts comparison between model (red) and original data (black
 
 <img src="paper/Fig16.svg" alt="image" width="640"/><br/>
 
-Note: Left chart depicts comparison between model (red) and original data (black). Right chart depicts the 365 day forecast of daily energy demand of Sacramento. Original data spanned 7 calendar years from 2006 to end of 2013.Interact with the data by clicking below:</p>
+<i>Note: Left chart depicts comparison between model (red) and original data (black). Right chart depicts the 365 day forecast of daily energy demand of Sacramento. Original data spanned 7 calendar years from 2006 to end of 2013.</i></p>
+	<p>Interact with the data by clicking below:</p>
 
 				<div id="City4">
 				<button onclick="runCFour()">
@@ -459,7 +465,7 @@ Note: Left chart depicts comparison between model (red) and original data (black
 
 <img src="paper/Fig17.svg" alt="image" width="640"/><br />
 
-Note: Top left: forecast errors for Eugene; top right: forecast errors for Dakar; bottom left: forecast errors for Louisville; bottom right: forecast errors for Sacramento</p>
+<i>Note: Top left: forecast errors for Eugene; top right: forecast errors for Dakar; bottom left: forecast errors for Louisville; bottom right: forecast errors for Sacramento</i></p>
 
 <div id="conclusion" class="section level2">
 <h2>Conclusion</h2>
