--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<h1 class="title">Multi-City Energy Analysis</h1>
 				<h4 class="author"><em>Yiqian Jin, Denis Tan, Jing Ye</em></h4>
 				<h4 class="date"><em>4 May 2015</em></h4>
+				<h4>This paper and its visualizations can be found at <a href="http://denistanwh.github.io">http://denistanwh.github.io</a></h4>
 			</div>
 
 			<div id="TOC">
@@ -137,7 +138,7 @@ res&lt;-NbClust(data.6, diss = NULL, distance = &quot;euclidean&quot;, min.nc = 
 									</p>
 							</div>
 							<div id="holt-winters-times-series-forecasting-algoritm" class="section level4">
-								<h4>Holt-Winters Times Series Forecasting Algoritm</h4>
+								<h4>Holt-Winters Times Series Forecasting Algorithm</h4>
 									<p>
 										Holt-Winters is a forecasting method for dealing with time series data with both trend and seasonal components. It is an extension of the Single Exponential Smoothing method. The Holt-Winters method has two versions, additive and multiplicative, the use of which depends on the characteristics of the particular time series. We use the additive method for simplicity and since the seasonality appears to be additive. Holt-Winters predictions are obtained as a weighted average of past observed values where the weights decline exponentially so that the most recent observations contribute to the forecast more than the values of earlier observations. The additive formula of this model is as follow:
 									</p>
