--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 			<div id="header">
 				<h1 class="title">Multi-City Energy Analysis</h1>
+				<p>This paper and its visualizations can be found at <a href="http://denistanwh.github.io">http://denistanwh.github.io</a>.</p>
 				<h4 class="author"><em>Yiqian Jin, Denis Tan, Jing Ye</em></h4>
 				<h4 class="date"><em>4 May 2015</em></h4>
-				<h4>This paper and its visualizations can be found at <a href="http://denistanwh.github.io">http://denistanwh.github.io</a></h4>
 			</div>
 
 			<div id="TOC">
