--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<li><a href="#grouping-of-cities">Grouping of Cities</a><ul>
 						<li><a href="#methodology">Methodology</a></li>
 						<li><a href="#results-discussion">Results &amp; Discussion</a></li>
-						<!--><li><a href="#visualization">Visualiation</a></li>
+						<!--<li><a href="#visualization">Visualiation</a></li>
 					</ul></li>-->
 					<li><a href="#forecasting-energy-demand">Forecasting Energy Demand</a><ul>
 						<li><a href="#methodology">Methodology</a></li>
