--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 				<h2>Grouping of Cities</h2>
 					<div id="methodology1" class="section level3">
 							<h3>Methodology</h3>
-							<div id="cluster-analysis-k-means-algorithm" class="section level4">
-								<h4>Cluster Analysis &amp; K-means Algorithm</h4>
+							<!--<div id="cluster-analysis-k-means-algorithm" class="section level4">
+								<h4>Cluster Analysis &amp; K-means Algorithm</h4>-->
 									<p>
 										To group localities, we apply cluster analysis. Clustering involves grouping objects in such a way that objects in the same group are more similar, by some pre-determined measure, to each other than to those in other groups. This is a fundamental concept in exploratory data mining, and a frequently-used method for statistical data analysis in many fields such as machine learning and pattern recognition (Kaufman &amp; Rousseeuw, 2009).
 									</p>
