--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 											</div>
 											<div id="references" class="section level2">
 												<h2>References</h2>
-													<p if="cite9">Bostock, M. (2013). Data-driven Documents. Retrieved January 10, 2015, from: <a href="http://d3js.org/">http://d3js.org/</a></p>
+													<p id="cite9">Bostock, M. (2013). Data-driven Documents. Retrieved January 10, 2015, from: <a href="http://d3js.org/">http://d3js.org/</a></p>
 													<p id="cite8">Cohen, Elliot, Vijay Modi, Henri Torbey, Michael Piccirelli and Yu-Tian (2015). Global Trends in Urban Energy Use. Working Paper of the Sustainable Engineering Lab, Columbia University, February 2015. Available online: <a href="http://ecohen4.github.io/Energy/Global_Trends_v4.html">http://ecohen4.github.io/Energy/Global_Trends_v4.html</a></p>
 													<p id="cite13">Chatfield, C., &amp; Yar, M. (1988). Holt-Winters forecasting: some practical issues. <em>The Statistician</em>, 130-140.</p>
 													<p id="cite1">C40. (n.d.). Why Cities? Ending Climate Change Begins in the City. Retrieved May 01, 2015, from: <a href="www.c40.org/ending-climate-change-begins-in-the-city">www.c40.org/ending-climate-change-begins-in-the-city</a></p>
