--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 																<p>
 																	<b>Figure 14: Forecast errors</b>
 																	<br />
-																	<img src="paper/Fig17.svg" alt="image" width="640"/>
+																	<img src="paper/Fig17.svg" alt="image" width="840"/>
 																	<br />
 																	<i>Note: Top left: forecast errors for Eugene; top right: forecast errors for Dakar; bottom left: forecast errors for Louisville; bottom right: forecast errors for Sacramento</i>
 																</p>
@@ -440,7 +440,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 											<div id="conclusion" class="section level2">
 												<h2>Conclusion</h2>
 													<p>
-														Using energy demand data from 43 cities, we trimmed the data down to 30 cities and stratified them into 4 groups based on similarity in the shape of their energy demand curves. We then applied a Holt-Winters time-series algorithm to forecast the energy demand over a period of 365 days for each chosen city. Finally, we visualized the energy data and forecasts using a cascading “drill-down” approach. This approach allows us to first depict an overview of the data before zooming into the granular details, in line with Schneiderman’s visual information seeking mantra. This paper introduces a data-driven method to group cities based on their energy demand profile to make cross-city collaboration on energy demand management more effective.
+														Using energy demand data from 43 localities, we trimmed the data down to 30 localities (28 cities and 2 states) and stratified them into 4 groups based on similarity in the shape of their energy demand curves. We then applied a Holt-Winters time-series algorithm to forecast the energy demand over a period of 365 days for one representative city of each group. We presented our work using a cascading “drill-down” approach. This approach allows us to first depict an overview of the data before zooming into the granular details, in line with Schneiderman’s visual information seeking mantra. All in all, this paper introduces a data-driven method to group cities based on their energy demand profile to make cross-city collaboration on energy demand management more effective.
 													</p>
 											</div>
 											<div id="references" class="section level2">
