--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ res &lt;- NbClust(data.6, diss = NULL, distance = &quot;euclidean&quot;, min.nc 
 									<li>Cluster 1: Abidjan, Eugene, Tacoma, Queensland</li>
 									<li>Cluster 2: Dakar, Honolulu, Manila, Mbabane, Nairobi, Singapore, Antigua</li>
 									<li>Cluster 3: Amman, Chattanooga, Colorado Springs, Kansas City, Louisville, New York, Omaha, Springfield, Tokyo, Detroit, Indianapolis, Philadelphia</li>
-									<li>Cluster 4: North Little Rock, El Paso, Los Angeles, Memphis, Sacramento, Delhi - BRPL</li>
+									<li>Cluster 4: North Little Rock, El Paso, Los Angeles, Memphis, Sacramento, Delhi - BRPL, New South Wales</li>
 								</ol> 
 							</p>
 							<p>Figure 3 visually depicts the result of clustering.</p>
@@ -240,7 +240,7 @@ res &lt;- NbClust(data.6, diss = NULL, distance = &quot;euclidean&quot;, min.nc 
 																<br />
 																<i>Note: Energy Demand is normalized by subtracting its mean and dividing the result by its standard deviation over the duration considered.</i>
 															</p>
-															<p>Cities in Cluter 4 are: City of North Little Rock, El Paso, Los Angeles, Memphis, Sacramento, Delhi - BRPL.</p>
+															<p>Cities in Cluter 4 are: City of North Little Rock, El Paso, Los Angeles, Memphis, Sacramento, Delhi - BRPL, New South Wales.</p>
 															<p>In this cluster, yearly energy pattern turns out to be “N” style, with the much less pronounced peak in January (boreal winter, austral summer) when compared with Cluster 3 and a peak in August (boreal summer, austral winter). Intuitively, this pattern should correspond with cities of one of two specifications:
 															</p>
 															<ol style="list-style-type: decimal">
