--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ res &lt;- NbClust(data.6, diss = NULL, distance = &quot;euclidean&quot;, min.nc 
 																<li>Cities in the northern hemisphere that have milder winters than those in Cluster 3 such that heating is not significant and summers that require some form of air-conditioning use.</li>
 															</ol>
 															<p>
-																Geographically, North Little Rock, El Paso, Memphis, Sacramento and Los Angeles are all in the southern and western region of USA. These cities have less harsh winters than those of Cluster 3. Delhi, although located separated from other cities in this group, occupy a similar latitude, and hence, has a similar climate. These cities all correspond to the second specification above.
+																Geographically, North Little Rock, El Paso, Memphis, Sacramento and Los Angeles are all in the southern and western region of USA. These cities have less harsh winters than those of Cluster 3. Delhi, although located separated from other cities in this group, occupy a similar latitude, and hence, has a similar climate. These cities all correspond to the second specification above. For New South Wales, its energy demand is likely driven by that of its most populated area: Sydney. New South Wales lies in the southern hemisphere and corresponds to the first speciication above.
 															</p>
 															<p>All in all, the clustering results generally correspond to our intuitive understanding of the electrical energy demand profiles of the various cities.</p>
 													</div>
